2006-08-03  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/login_controller.rb (LoginController::banlist_test_by_ar_string): Fix. I mistake column name in trackback table (wrong: blogname, correct: blog_name).

2006-08-02  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/functional/notes_controller_test.rb (NotesControllerTest::test_indexabc): Add to test this fix.

	* donrails/app/controllers/notes_controller.rb (NotesController::indexabc): Fix for parameter parse.

2006-08-02  Akira TAGOH  <at@gclab.org>

	* donrails/tool/plugin-setup.rb: add --force option for installer.

2006-08-02  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* README.cache: Add new file.

	* donrails/app/controllers/notes_controller.rb (NotesController::noteslist): Cleanup.

	* donrails/config/routes.rb: More restrict for routing to 'indexabc'.

	* donrails/test/functional/notes_controller_test.rb (NotesControllerTest::test_dateparse): Remove test for NotesController::dateparse.

	* donrails/app/controllers/notes_controller.rb (NotesController::dateparse): Remove this method. Change to process wrong input by httpd (mod_rewrite).

	* Makefile (linkinit): Add copy from example/{notes,index}.rhtml.

	* donrails/example/donrails_env.rb: Update for applying 1.2.

	* INSTALL.ja: Add example.

2006-07-29  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* Makefile (plugin): Add to set secutity_extensions plugin.

2006-07-28  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* SVN repository will remove to google code hosting.
	svn checkout http://donrails.googlecode.com/svn/trunk/ donrails

2006-07-27  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/public/stylesheets/araki.css: Some change: table and pre setting.

	* donrails/public/stylesheets/login.css: Some change: table and pre setting.

	* donrails/app/views/notes/catch_trackback.rxml: Rename from catch_ping.

	* donrails/app/views/notes/catch_ping.rxml: New file.

	* donrails/app/controllers/notes_controller.rb 